--- a/gb/19/8/4/n11429618.md
+++ b/gb/19/8/4/n11429618.md
@@ -1,60 +1,65 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qqc2352/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qqc2352/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qqc2352/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qqc2352/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>蔡英文参加原民音乐节 与世界共享多元文化</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/c23209e92825438e11304540458b72e9-600x400.jpg" />
 <h6>总统蔡英文3日在台东森林公园参加第二届原住民族国际音乐节。（原住民族委员会提供）
 </h6>
 <hr>
-<p>【大纪元2019年08月04日讯】（大纪元记者龙芳台湾<ahref="https://github.com/qqc2352/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>报导）第二届“Taiwan PASIWALI Festival”<ahref="https://github.com/qqc2352/djy/blob/master/gb/tag/%E5%8E%9F%E4%BD%8F%E6%B0%91%E6%97%8F.md#1">原住民族</a>国际<ahref="https://github.com/qqc2352/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90%E8%8A%82.md#1">音乐节</a>2日起一连3天在台东森林公园热闹演出，除国内知名艺人与团队外，还有马达加斯加等多国原住民音乐人共襄盛举。总统蔡英文3日也坐在草地上，与上万民众一起欣赏这场国际原住民族的音乐盛会。总统表示，原住民文化资产是台湾重要的资产，要与世界共享，希望大家可以感受台湾多元族群文化之美。</p>
-<figure id="attachment_11429622" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/08/384e8a160fbb4e12f805cdd7ce4ba4ec.jpg"><img class="size-large wp-image-11429622" src="https://i.epochtimes.com/assets/uploads/2019/08/384e8a160fbb4e12f805cdd7ce4ba4ec-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">总统蔡英文3日在<ahref="https://github.com/qqc2352/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>森林公园参加第二届<ahref="https://github.com/qqc2352/djy/blob/master/gb/tag/%E5%8E%9F%E4%BD%8F%E6%B0%91%E6%97%8F.md#1">原住民族</a>国际<ahref="https://github.com/qqc2352/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90%E8%8A%82.md#1">音乐节</a>。（原住民族委员会提供）</figcaption></figure>
+<p>【大纪元2019年08月04日讯】（大纪元记者龙芳台湾<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>报导）第二届“Taiwan PASIWALI Festival”<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8E%9F%E4%BD%8F%E6%B0%91%E6%97%8F.md#1">原住民族</a>国际<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90%E8%8A%82.md#1">音乐节</a>2日起一连3天在台东森林公园热闹演出，除国内知名艺人与团队外，还有马达加斯加等多国原住民音乐人共襄盛举。总统蔡英文3日也坐在草地上，与上万民众一起欣赏这场国际原住民族的音乐盛会。总统表示，原住民文化资产是台湾重要的资产，要与世界共享，希望大家可以感受台湾多元族群文化之美。</p>
+<figure id="attachment_11429622" aria-describedby="caption-attachment-11429622" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/384e8a160fbb4e12f805cdd7ce4ba4ec.jpg"><img class="size-large wp-image-11429622" src="https://i.epochtimes.com/assets/uploads/2019/08/384e8a160fbb4e12f805cdd7ce4ba4ec-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11429622" class="wp-caption-text">总统蔡英文3日在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%9C.md#1">台东</a>森林公园参加第二届<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8E%9F%E4%BD%8F%E6%B0%91%E6%97%8F.md#1">原住民族</a>国际<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90%E8%8A%82.md#1">音乐节</a>。（原住民族委员会提供）</figcaption></figure>
 <p>原民会夷将．拔路儿Icyang．Parod主委表示，音乐节定名为“Taiwan? PASIWALI音乐节”，是因为PASIWALI是台湾原住民族阿美族语“往东方”的意思，东方是太阳升起的地方，也是台湾孕育许多原住民族群的地方，更是南岛语族的发源地，所以选在台东举办这个音乐节，希望让世界透过原住民族音乐看到台湾。</p>
 <p>今年适逢原住民族正名25周年纪念，夷将．拔路儿说，原住民族音乐节让原住民族的歌手、乐团、舞团藉由这个活动在世界上崭露头角，也让世界各国的原住民族音乐可以在这里发声、发光、发亮。</p>
 <p>台东县长饶庆铃表示，台东原住民人口有近8万人，约占全县人口的3分之一，是原住民族群最多也是比例最高的县市，台东原住民音乐和文化正积极与世界连结、与世界接轨。</p>
 <p>今年国际音乐节国外邀请马达加斯加、帛琉、菲律宾、日本、马来西亚等国家原住民音乐人共襄盛举，国内艺人则有陈昇+阿VAN与新宝岛康乐队、舒米恩、以莉高露、王宏恩、萨瓦里、漂流出口、查劳?巴西瓦里，4日晚压轴节目则由动力火车上场。</p>
-<figure id="attachment_11429623" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/08/c3bccb6a05b9c3b1bb71dafc1adecfa4.jpg"><img class="size-large wp-image-11429623" src="https://i.epochtimes.com/assets/uploads/2019/08/c3bccb6a05b9c3b1bb71dafc1adecfa4-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">获多项音乐大奖的台湾原住民歌手舒米恩(左)在原住民族国际音乐节演唱。（台东县政府提供）</figcaption></figure>
+<figure id="attachment_11429623" aria-describedby="caption-attachment-11429623" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/08/c3bccb6a05b9c3b1bb71dafc1adecfa4.jpg"><img class="size-large wp-image-11429623" src="https://i.epochtimes.com/assets/uploads/2019/08/c3bccb6a05b9c3b1bb71dafc1adecfa4-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11429623" class="wp-caption-text">获多项音乐大奖的台湾原住民歌手舒米恩(左)在原住民族国际音乐节演唱。（台东县政府提供）</figcaption></figure>
 <p>责任编辑：陈玟绮</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/19/7/30/n11418486.md#1">桃园市全年提供长者肺炎链球菌疫苗接种</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/19/7/30/n11418815.md#1">钟小平力促“郭柯合” 目标连署100万</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/19/7/30/n11418991.md#1">高潞助理获400万补助 时力要求说明否则恐开除党籍</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/19/8/1/n11422939.md#1">柯组党   郑文灿：良性竞争但对时代力量冲击大</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/19/8/1/n11423159.md#1">多元融合方式  原住民族正义正实现</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/19/8/1/n11423296.md#1">原民日16族秀力与美 回顾“正名自治土地”</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/19/8/1/n11424005.md#1">全国第一所阿美族实验学校 剪彩揭牌　</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/21/n12126520.md#1">助邮轮产业发展 海大成立邮轮产学发展中心</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/21/n12125645.md#1">宜兰携手LINE购物  线上买菜趣</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/21/n12125652.md#1">一甲子传统棉被技艺  长兴棉被行老店巡礼</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/7/30/n11418486.md#1">桃园市全年提供长者肺炎链球菌疫苗接种</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/7/30/n11418815.md#1">钟小平力促“郭柯合” 目标连署100万</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/7/30/n11418991.md#1">高潞助理获400万补助 时力要求说明否则恐开除党籍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/1/n11422939.md#1">柯组党 郑文灿：良性竞争但对时代力量冲击大</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/1/n11423159.md#1">多元融合方式  原住民族正义正实现</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/1/n11423296.md#1">原民日16族秀力与美 回顾“正名自治土地”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/1/n11424005.md#1">全国第一所阿美族实验学校 剪彩揭牌　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690757.md#1">宜县新增7名确诊者 连假期间加开筛检时段</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689289.md#1">台东县府送TT守护包 提供居隔者物资关怀</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688557.md#1">基隆马拉松、毕旅延办 城博会照原定计划筹备</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/7/n10464792.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（二）</a></li><li><a href="https://github.com/qqc2352/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank">中共侵犯宗教自由 美国宣布将持续追责</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513937.md#1" target="_blank">摧毁传统乡绅制与现代法治基础的痞子运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/22/n10581299.md#1" target="_blank">绝路逢生  台湾女子找到心灵的蓝天</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/21/n12126108.md#1">组图：两会开幕北京天空突变黑 民：天怒</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/21/n12126990.md#1">豪大雨袭台 全台湾22日停班停课一览【不断更新】</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12124357.md#1">回击赵立坚？川普：请跟这笨蛋解释一下</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12123695.md#1">新一波疫情在中国爆发 与上一波有三大不同</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12124118.md#1">陆男翻墙被罚五百元 网民：应抓中共发言人</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/19/n12121988.md#1">爆大陆副导演潜规则 台亲共女星拒绝后遭暴力</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12124356.md#1">梁朝伟房产被强制拍卖 刘嘉玲炒房大赚不够赔</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12124884.md#1">自曝辞演《还珠格格》原因 郑爽被质疑太荒唐</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/21/n12127097.md#1">中共强推“港版国安法”一众港星发文谴责</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12122671.md#1">得知爸爸是假面骑士 女儿反应让水嶋斐吕感动</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/19/n12120346.md#1">曾预言中共肺炎 印度男孩：12月有更大灾难</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/14/n12108060.md#1">“朝三暮四”与“朝四暮三” 讲了什么道？</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/18/n12117961.md#1">《地母经》预言 2020年大难年内不会结束</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/21/n12125394.md#1">获权分配百万奖金 大陆职业经理人的故事</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12124139.md#1">二娘修法轮功 穷棒子村有福了</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qqc2352/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qqc2352/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/4/n11429618.htm">蔡英文参加原民音乐节 与世界共享多元文化</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/4/n11429618.htm">蔡英文参加原民音乐节 与世界共享多元文化</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qqc2352/djy/blob/master/gb/19/8/4/n11429618.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qqc2352/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qqc2352/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qqc2352/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/8/4/n11429618.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
